--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -224,7 +224,7 @@ The data for the case study were collected from 216 HIV-positive adults on antir
 
 We examine the biomarkers Interleukin 6 (IL-6) and Interleukin 1 beta (IL-1-$\beta$); both are right-skewed with 3% and 39% of values censored below the lower limit of detection, respectively. Censored values are set to 0. To account for skewness and censoring we fit Bayesian CPM models using logit, probit, and loglog link functions, noninformative $\beta$ priors and a concentration parameter of either $\boldsymbol{\alpha}=1/J$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$ for the Dirichlet distribution to estimate the association between BMI and the conditional mean, median, and 90th quantile of each biomarker.
 
-We evaluate convergence of each model using $\hat{R}$ scale reduction factor [@gelman_bayesian_2014] and traceplots of MCMC draws. Model comparison is performed using the difference in expected log predictive density (elpd) calculated using leave-one-out (loo) cross-validation [@vehtari_practical_2017]. Model fit is assessed using graphical checks of the of posterior predictive distribution and posterior predictive p-values [@stern_bayesian_2005; @gelman_bayesian_2014].
+We evaluate convergence of each model using $\hat{R}$ scale reduction factor [@gelman_bayesian_2014] and traceplots of MCMC draws. Model comparison is performed using the difference in expected log predictive density (ELPD) calculated using leave-one-out cross-validation [@vehtari_practical_2017]. Model fit is assessed using graphical checks of the of posterior predictive distribution and posterior predictive p-values [@stern_bayesian_2005; @gelman_bayesian_2014].
 
 <!--
 Model checking
@@ -240,7 +240,7 @@ Model checking
 
 ## Simulations
 
-Bayesian CPM was fit to each of the 1000 simulation datasets for each scenario/prior/sample size combination and the results averaged. Each model  was run with 2 chains using 2000 warmup and 4000 total iterations for a total of 4000 posterior parameter vector draws per model. 
+A Bayesian CPM was fit to each of the 1000 simulation datasets for each scenario/prior/sample size combination [!! update here - what point est used, etc] and the results averaged. Each model  was run with 2 chains using 2000 warmup and 4000 total iterations for a total of 4000 posterior parameter vector draws per model. 
 
 In general, the Bayesian CPM had reasonable performance in estimating parameters and conditional quantities for the simulation settings explored; especially for larger sample sizes. However, performance was poor for some quantities and may be sensitive to the conditioning covariate values and censoring threshold where the model extrapolates outside the observed data range. The three $\boldsymbol{\alpha}$ values produced similar results for most scenarios; no single prior choice was best across all parameters and quantities of interest.
 
@@ -268,7 +268,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_pars.png"))
 
 ### Conditional CDF
 
-Figure \@ref(fig:simplt-cdf-1) shows the average percent bias in the posterior conditional CDF for scenario (1). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes, $n=25$ and $n=50$. For conditional CDF estimates at $y<e^{0.5}$, the concentration prior $\alpha=1/J$ produces estimates that are slightly more biased than the othe reciprocal priors. The direction of the bias does not show a consistent trend across sample size. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes. The results are similar for scenario (2) and (3) under both outcomes: larger percent bias for the conditional estimates of $F(y|X_1=1,X_2=1)$ for lower values of $y$ and smaller sample sizes (supplemental figs. \@ref(fig:simplt-cdf-2) and \@ref(fig:simplt-cdf-3)).
+Figure \@ref(fig:simplt-cdf-1) shows the average percent bias in the posterior conditional CDF for scenario (1). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes, $n=25$ and $n=50$. In addition, for conditional CDF estimates at $y<e^{0.5}$, the concentration prior $\alpha=1/J$ produces estimates that are slightly more biased than the other reciprocal priors. The direction of the bias does not show a consistent trend across sample size. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes. The results are similar for scenario (2) and (3) under both outcomes: larger percent bias for the conditional estimates of $F(y|X_1=1,X_2=1)$ for lower values of $y$ and smaller sample sizes (supplemental figs. \@ref(fig:simplt-cdf-2) and \@ref(fig:simplt-cdf-3)).
 
 ```{r simplt-cdf-1, fig.cap="Bias in conditional CDF for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_cdf.png"))
@@ -276,11 +276,9 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_cdf.png"))
 
 ### Conditional Mean
 
-The top row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) present the average percent bias in the posterior conditional mean for the uncensored simulation outcome at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ in scenarios (1) and (2), respectively. The average percent bias across was less than 5\% for all sample sizes and priors for the posterior conditional mean in the first two scenarios.  In contrast, the bottom row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) show the posterior conditional mean estimates for the censored data. For outcomes censored at $Y<1$, a value of $Y=1$ was used in the conditional mean calculation. Using the censoring threshold value for censored observations can result in inflated average percent bias compared to the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. 
+The top row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) present the bias in the posterior conditional mean for the uncensored simulation outcomes at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ in scenarios (1) and (2), respectively. For these scenarios, the average percent bias was less than 5\% for all sample sizes and priors.  In contrast, the bottom row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) show the bias in posterior conditional mean estimates for the censored outcomes where a value of $y=1$ was used in the conditional mean calculation for outcomes censored at $Y<1$. Using the censoring threshold value for censored observations can result in inflated average percent bias compared to the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. For example, the average percent bias of $E(Y|X_1=1,X_2=1)$ for the censored outcome in scenario (1) is around 40\%. 
 
-! check this paragraph !!
-For scenario (3) the average percent bias for the uncensored outcome ranged from $<-1.0$\% to -12.5\% with larger bias for the $\boldsymbol{\alpha}=1/J$ prior (fig. \@ref(fig:simplt-mn-3)). The censored outcome for scenario (3) followed a similar trend as the other scenarios 
-For the censored outcome in similar trend was seen in scenario (3) where a value of $Y=0$ was used to calculate the conditional mean for outcomes censored at $Y<0$.
+For scenario (3) the average percent bias for the uncensored outcome ranged from -12.5\% to $<-1.0$\% with larger bias for the $\boldsymbol{\alpha}=1/J$ prior and smaller $n$ (fig. \@ref(fig:simplt-mn-3)). As in the first two scenarios, the censored outcome which used a value of $y=0$ in the conditional mean calculation for observations less than 0 showed a positive shift in average percent bias at $(X_1=1,X_2=1)$ although to a much smaller degree than scenario (1).
 
 ```{r simplt-mn-1, fig.cap="Bias in conditional mean for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_mn.png"))
@@ -296,11 +294,13 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_mn.png"))
 
 ### Conditional Median and Quantiles
 
-The results for the conditional posterior median in scenario (1) are shown in figure \@ref(fig:simplt-med-1). For both outcomes, the conditional median estimate had a positive bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\alpha$ concentration parameters. The pattern was nearly identical for scenario (2) (fig. \@ref(fig:simplt-med-2)). For both outcomes under scenario (3), bias in the conditional median estimate was smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There were only small differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameters (fig. \@ref(fig:simplt-med-3)). 
+The simulation results for the conditional posterior median in scenario (1) are shown in figure \@ref(fig:simplt-med-1). Across outcomes, the conditional median estimate had a positive  average percent bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameters. The pattern was similar for scenario (2) (supp. fig. \@ref(fig:simplt-med-2)). For both outcomes under scenario (3), average percent bias in the conditional median estimate was smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There were only small differences between the three $\boldsymbol{\alpha}$ concentration parameters except for the small sample sizes (fig. \@ref(fig:simplt-med-3)). 
 
-Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$ with larger bias when the the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are positively biased for the smaller sample sizes with more bias for the $\alpha=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar trend as the censored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile are close to unbiased for all the priors and sample sizes and the censored outcome estimates show smaller bias at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$ (fig. \@ref(fig:simplt-q20-c).
+Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased (between 25\% and 90\%) for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$, with larger bias when the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are again positively biased for the smaller sample sizes with more bias for the $\boldsymbol{\alpha}=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar pattern as the uncensored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile have reasonably small average percent bias for all the priors and sample sizes except at $(X_1=1,X_2=1)$ when $n=25$. Similar to scanerio (1), the censored outcome estimates show small average percent bias at $(X_1=1,X_2=0)$, but very large average percent bias at $(X_1=1,X_2=1)$ (fig. \@ref(fig:simplt-q20-c)).
 
+<!--
 Figure \@ref(fig:simplt-q80-b) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 2. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors. Figure \@ref(fig:simplt-q80-c) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 3 (avg bias instead of pct bias - check!!).
+-->
 
 ```{r simplt-med-1, fig.cap="Bias in conditional median for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_med.png"))
@@ -325,7 +325,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_q20.png"))
 
 ### Computation time
 
-Simulations were run with `R` version 3.6.0 (2019-04-26) and `rstan` (Version 2.19.2, GitRev: 2e1f913d3ca3) on a high-performance computing cluster running under CentOS Linux 7 (Core) with with 1.90GHz or 2.40GHz Intel Xeon CPUs. MCMC sampling time for the three scenarios is shown in figure \@ref(fig:simplt-samptime). Average per chain sampling time was similar across scenarios and priors. The censored outcomes -- with fewer categories and $\gamma$ parameters -- had shorter sampling times. 
+Simulations were performed using `R` version 3.6.0 (2019-04-26) and `rstan` (Version 2.19.2, GitRev: 2e1f913d3ca3) on a high-performance computing cluster running under CentOS Linux 7 (Core) with 1.90GHz or 2.40GHz Intel Xeon CPUs. MCMC sampling time for the three scenarios is shown in figure \@ref(fig:simplt-samptime). Average per chain sampling time appears to increase exponentially with sample size and was similar across scenarios and priors. <!--The censored outcomes -- with fewer categories and $\gamma$ parameters -- had shorter sampling times.--> 
 
 ```{r simplt-samptime, fig.cap="Per chain MCMC sampling time for simulations", fig.align='center', out.width='95%'}
 knitr::include_graphics(file.path(wd,"fig","sim_MCMC_sample_times.png"))
@@ -333,7 +333,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_MCMC_sample_times.png"))
 
 ## Case Study
 
-For each of the biomarker outcomes six model specifications were fit: probit, logit, or loglog link with $\boldsymbol{\alpha}=1/(0.8+0.35J)$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$. Each model sampled from 2 chains with 2000 warmup and 4000 total iterations to produce 4000 posterior sample draws for each parameter. For all the biomarker outcome models considered, all $\hat{R}$ values were $<1.01$ and traceplots indicated no issues with mixing or stationarity. Table \ref{tab:elpdtab} shows the difference in ELPD for the models for biomarker IL-6 and IL-1-$\beta$, respectively. Based on the difference in ELPD, the model with loglog link and $\boldsymbol{\alpha}=1/(0.8+0.35J)$ was used for the both the IL-6 and IL-1-$\beta$ outcome, however the top several models all had similar elpd. 
+For each of the biomarker outcomes six model specifications were fit: probit, logit, or loglog link with $\boldsymbol{\alpha}=1/(0.8+0.35J)$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$. Each model sampled from 2 chains with 2000 warmup and 4000 total iterations to produce 4000 posterior sample draws for each parameter. For all the biomarker outcome models considered, all $\hat{R}$ values were $<1.01$ and traceplots indicated no issues with mixing or stationarity. Table \ref{tab:elpdtab} shows the difference in ELPD for the models for biomarker IL-6 and IL-1-$\beta$, respectively. Based on the difference in ELPD, the model with loglog link and $\boldsymbol{\alpha}=1/(0.8+0.35J)$ was used for the both the IL-6 and IL-1-$\beta$ outcome, however the top several models all had similar ELPD. 
 
 ```{r elpd, include=FALSE}
 rnd<-2
