--- a/paper/index.Rmd
+++ b/paper/index.Rmd
@@ -116,8 +116,7 @@ readr::write_lines(htmlhead, path = "header.html")
 
 ## Abstract
 
-! rework abstract based on updated sims and results !
-Ordinal cumulative probability models (CPMs) -- also known as cumulative link models -- such as the proportional odds regression model are typically used for discrete ordered outcomes, but can accommodate both continuous and mixed discrete/continuous outcomes since these are also ordered.  Recent papers by Liu et al. [@liu_modeling_2017] and Tian et al. [@tian_empirical_2019] describe the advantages of ordinal CPMs in this setting using non-parametric maximum likelihood estimation (NPMLE). We formulate a Bayesian CPM for continuous or mixed outcome data. Bayesian CPMs have advantages over frequentist CPMs with regard to interpretation, flexibility, and exact inference (within simulation error) for parameters and functions of parameters<!--when the log-likelihood is not well-approximated by a quadratic function-->. We explore characteristics of the Bayesian CPM through simulations and a case study using HIV biomarker data. In addition, we provide the `bayesCPM` R package which implements Bayesian CPM models using the R interface to Stan. [! Add sentence summarizing findings, e.g. models work with larger sample sizes ...]
+Ordinal cumulative probability models (CPMs) -- also known as cumulative link models -- such as the proportional odds regression model are typically used for discrete ordered outcomes, but can accommodate both continuous and mixed discrete/continuous outcomes since these are also ordered.  Recent papers by Liu et al. [@liu_modeling_2017] and Tian et al. [@tian_empirical_2019] describe ordinal CPMs in this setting using non-parametric maximum likelihood estimation (NPMLE). We formulate a Bayesian CPM for continuous or mixed outcome data. Bayesian CPMs inherit many of the benefits of frequentist CPMs and have advantages with regard to interpretation, flexibility, and exact inference (within simulation error) for parameters and functions of parameters<!--when the log-likelihood is not well-approximated by a quadratic function-->. We explore characteristics of the Bayesian CPM through simulations and a case study using HIV biomarker data. In addition, we provide the package `bayesCPM` which implements Bayesian CPM models using the `R` interface to the Stan probabilistic programing language. The Bayesian CPM for continous outcomes can be implemented with only minor modifications to the prior specification and -- despite several limitations -- has generally good statistical performance with moderate or large sample sizes.
 
 <!-- comparison to BNP?? -->
 
